--- a/covid/index.html
+++ b/covid/index.html
@@ -3,26 +3,51 @@
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Team | Andrea Tagliazucchi</title>
-    <meta name="description" content="Fondatore di Beerstrot e barista in charge"/>
-    <meta name="author" content="Ca' Vecchia Beerstrot" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
+    <title>Beerstrot | Informativa Covid</title>
+    <meta name="description" content="Informativa Covid"/>
+
+    <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2020"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@beerstrot"/>
+    <meta name="twitter:title" content="Informativa Covid"/>
+    <meta name="twitter:description" content="Informativa Covid"/>
+    <meta name="twitter:url" content="https://www.beerstrot.it/covid/"/>
     <meta property="fb:app_id" content="1549149915357715"/>
+    <meta property="og:url" content="https://www.beerstrot.it/covid/"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="Informativa Covid"/>
+    <meta property="og:description" content="Informativa Covid"/>
     <link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="https://www.beerstrot.it/contatti/team/andrea-tagliazucchi.html"/>
+    <link rel="canonical" href="https://www.beerstrot.it/covid/"/>
     <link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
-    <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
+<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <!-- Facebook Pixel Code -->
+    <script>
+        !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+        n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+        t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+        document,'script','//connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '770709373057085');
+        fbq('track', "PageView");
+        fbq('track', 'ViewContent');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+        src="https://www.facebook.com/tr?id=770709373057085&ev=PageView&noscript=1"/>
+    </noscript>
+<!-- End Facebook Pixel Code -->
 </head>
 <body>
 <!-- navbar con hamburger -->
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
-                 <h1><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
+                 <h2><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h2>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -33,7 +58,7 @@
                 <li class="divider"></li>
                 <li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a></li>
+                <li><a href="https://www.beerstrot.it/covid/">Asporto e Consegne</a></li>
                 <li class="divider"></li>
                 <li><a href="https://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
@@ -44,37 +69,88 @@
         </section>
     </nav>
 <!-- fine navbar con hamburger -->
-<!-- inizio header -->
-    <header>
-        <div id="image-background-team">
-            <img class="image-hero" src="https://www.beerstrot.it/asset/img/large/andrea-tagliazucchi-background.jpg" alt="Andrea Tagliazucchi" />
-             <img class="user-image" src="https://www.beerstrot.it/asset/img/thumbs/andrea-tagliazucchi-th.jpg" alt="Andrea Tagliazucchi">
-        </div>
-        <div class="row">
-            <div class="medium-10 large-9 columns extra-space">
-                <h1>Andrea Tagliazucchi</h1>
-                <p class="by-line">Fondatore di Beerstrot e barista in charge</p>
-                <blockquote>
-                    <p>Scrivo di birra e mi piace berla di brutto, ma solo birra artigianale.</p>
-                    <p>Tutte le foto sono fatte con un iphone e raramente sono ritoccate con photoshop: mi piace far vedere le cose come sono.
-                    <cite>Andrea</cite>
-                    </p>
-                </blockquote>
-            </div>
-        </div>
-    </header>
-<!-- fine header -->
-<!-- inizio navigazione nota: ha extra space -->
+
+<!-- informativa -->
     <div class="row">
-        <div class="medium-12 large-12 columns extra-space">
-            <div class="clearfix">
-                <a href="https://www.beerstrot.it/contatti/#team" class="left">&larr; Tutto il team</a>
-            </div>
+        <div class="medium-12 large-12 columns">
+            <h1>Informativa Covid</h1>
+            <hr>
         </div>
     </div>
-<!-- fine navigazione -->
+    <div class="row">
+        <div class="large-12 medium-12 small-12 columns">
+            <h2>Alcune regole da rispettare</h2>
+            <p>Per farci passare una bella serata, abbiamo approntato alcune inderogabili regole che ci permetterano di cenare tranquilli e rilassati.</p>
+            <ul>
+                <li>
+                    <strong>La prenotazione è obbligatoria</strong>. Non accettiamo persone in sovrannumero.
+                </li>
+                <li>
+                    <strong>Rispettare gli orari</strong>. I turni sono:
+                    <ul>
+                        <li>dalle 19:00 alle 20:45</li>
+                        <li>dalle 20:00 alle 21:45</li>
+                        <li>dalle 20:30 alle 22:15</li>
+                        <li>dalle 21:00 alle 22:45</li>
+                    </ul>
+                </li>
+                <li>
+                    Alla fine del turno, della durata di 1 ora e 45 minuti, lasciare il tavolo per consentire al personale la sanificazione.
+                </li>
+                <li>
+                    <strong>Il ristorante è aperto solo all'esterno</strong>. In caso di pioggia o minaccia di pioggia il ristorante resterà chiuso. Se dovesse piovere durante il servizio vi chiediamo, gentilmente, di lasciare il locale ed evitare assembramenti.
+                </li>
+                <li>
+                    I tavoli sono disposti per consentire la distanza di un metro tra i commensali, a prescindere dal grado di parentela. Non è consentito variare la configurazione dei tavoli.
+                </li>
+                <li>
+                    <strong>Le ordinazioni si fanno solo al tavolo</strong>: il bar non è accessibile.
+                </li>
+                <li>
+                    <strong>Il conto si paga al tavolo</strong>: per ogni tavolo accettiamo solo <strong>un pagamento</strong>.
+                </li>
+                <li>
+                    <strong>Bambini e adulti devono stare al tavolo</strong>. Non è consentito girare fra i tavoli o nelle parti comuni se non per recarsi ai bagni, fumare nell'apposita area o lasciare il locale.
+                </li>
+                <li>
+                    <strong>Indossare la mascherina</strong>, tranne quando si è seduti al tavolo.
+                </li>
+                <li>
+                    Evitare in qualsiasi momento assembramenti.
+                </li>
+                <li>
+                    Non è consentito portare dolci, spumanti e simili dall'esterno.
+                </li>
+                <li>
+                    È <strong>Vietato Fumare</strong> al di fuori dell'area preposta.
+                </li>
+            </ul>
+            <p>Il non rispetto di queste norme può causare grave danno a tutti noi, non ultimo il ritiro della licenza.</p>
+            <h2 class="">Alcune attenzioni</h2>
+            <ul>
+                <li>
+                    Il Menù è accessibile dal telefonino:<a href="https://www.beerstrot.it/menu"> <strong> Guarda il Menù &rarr;</strong></a>
+                </li>
+                <li>
+                    Piatti e posate sono monouso eco compatibili.
+                </li>
+                <li>
+                    Il bere viene servito in vetro igienizzato e sterilizzato.
+                </li>
+                <li>
+                    Il personale di sala utilizza mascherine e igienizza le mani continuamente.
+                </li>
+                <li>
+                    I bagni vengono igienizzati più volte durante il servizio, ma senza il vostro aiuto sarebbe tutto inutile.
+                </li>
+            </ul>
+            <p>Grazie mille per la collaborazione</p>
+            <br>
+        </div>
+<!-- informativa fine -->
+    </div>
 <!-- inizio footer -->
-    <footer class="panel-footer extra-space-footer">
+    <footer class="panel-footer">
         <div class="row">
 			<div class="large-12 columns">
 				<ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
@@ -152,7 +228,7 @@
             <p class="links">
                 <a href="https://www.beerstrot.it">Home</a>
                 <a href="https://www.beerstrot.it/menu/">Menù</a>
-                <a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a>
+                <a href="https://www.beerstrot.it/covid/">Asporto e Consegne</a>
                 <a href="https://www.beerstrot.it/social/">Social</a>
                 <a href="https://www.beerstrot.it/contatti/">Contatti</a>
                 <a href="https://www.beerstrot.it/blog/">Blog</a>
