--- a/covid/index.html
+++ b/covid/index.html
@@ -145,12 +145,19 @@
                 </li>
             </ul>
             <p>Grazie mille per la collaborazione</p>
-            <br>
         </div>
 <!-- informativa fine -->
+<!-- call to action inizio -->
+        <div class="row">
+            <div class="medium-12 large-12 columns">
+                <span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fab fa fa-phone"></i> 071 885 3384</a></span>
+                <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Prenota</a></span>
+            </div>
+        </div>
+<!-- call to action fine -->
     </div>
 <!-- inizio footer -->
-    <footer class="panel-footer">
+    <footer class="panel-footer extra-space">
         <div class="row">
 			<div class="large-12 columns">
 				<ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
