--- a/covid/index.html
+++ b/covid/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
     <title>Beerstrot | Informativa Covid</title>
     <meta name="description" content="Informativa Covid"/>
-
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2020"/>
     <meta name="twitter:card" content="summary_large_image"/>
@@ -23,8 +22,8 @@
     <link rel="canonical" href="https://www.beerstrot.it/covid/"/>
     <link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
-<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <!-- Facebook Pixel Code -->
     <script>
@@ -147,15 +146,15 @@
             <p>Grazie mille per la collaborazione</p>
         </div>
 <!-- informativa fine -->
-<!-- call to action inizio -->
-        <div class="row">
-            <div class="medium-12 large-12 columns">
-                <span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fab fa fa-phone"></i> 071 885 3384</a></span>
-                <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Prenota</a></span>
-            </div>
-        </div>
-<!-- call to action fine -->
     </div>
+    <!-- call to action inizio -->
+    <div class="row">
+        <div class="medium-12 large-12 columns">
+            <span class="hide-for-small "><a role="button" href="tel:+390718853384" class="button left"><i class="fab fa fa-phone"></i> 071 885 3384</a></span>
+            <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
+        </div>
+    </div>
+<!-- call to action fine -->
 <!-- inizio footer -->
     <footer class="panel-footer extra-space">
         <div class="row">
