--- a/covid/index.html
+++ b/covid/index.html
@@ -100,7 +100,7 @@
                     <strong>Il ristorante è aperto solo all'esterno</strong>. In caso di pioggia o minaccia di pioggia il ristorante resterà chiuso. Se dovesse piovere durante il servizio vi chiediamo, gentilmente, di lasciare il locale ed evitare assembramenti.
                 </li>
                 <li>
-                    I tavoli sono disposti per consentire la distanza di un metro tra i commensali, a prescindere dal grado di parentela. Non è consentito variare la configurazione dei tavoli.
+                    I tavoli sono disposti per consentire la distanza di un metro tra i commensali, a prescindere dal grado di parentela.
                 </li>
                 <li>
                     <strong>Le ordinazioni si fanno solo al tavolo</strong>: il bar non è accessibile.
@@ -147,6 +147,7 @@
         </div>
 <!-- informativa fine -->
     </div>
+
     <!-- call to action inizio -->
     <div class="row">
         <div class="medium-12 large-12 columns">
