--- a/covid/index.html
+++ b/covid/index.html
@@ -88,9 +88,10 @@
                     <strong>Rispettare gli orari</strong>. I turni sono:
                     <ul>
                         <li>dalle 19:00 alle 20:45</li>
-                        <li>dalle 20:00 alle 21:45</li>
+                        <li>dalle 19:45 alle 21:30</li>
                         <li>dalle 20:30 alle 22:15</li>
                         <li>dalle 21:00 alle 22:45</li>
+			<li>dalle 21:40 a chiusura</li>
                     </ul>
                 </li>
                 <li>
