--- a/covid/index.html
+++ b/covid/index.html
@@ -68,6 +68,7 @@
         </section>
     </nav>
 <!-- fine navbar con hamburger -->
+<img class="image-hero" src="https://www.beerstrot.it/asset/img/large/covid.jpg" alt="Ca' Vecchia Beerstrot Hamburger doppio"/>
 
 <!-- informativa -->
     <div class="row">
