--- a/covid/index.html
+++ b/covid/index.html
@@ -80,7 +80,7 @@
     <div class="row">
         <div class="large-12 medium-12 small-12 columns">
             <h2>Alcune regole da rispettare</h2>
-            <p>Per farci passare una bella serata, abbiamo approntato alcune inderogabili regole che ci permetterano di cenare tranquilli e rilassati.</p>
+            <p>Per passare una bella serata, abbiamo approntato alcune inderogabili regole che ci permetterano di cenare tranquilli e rilassati.</p>
             <ul>
                 <li>
                     <strong>La prenotazione è obbligatoria</strong>. Non accettiamo persone in sovrannumero.
@@ -114,7 +114,7 @@
                     <strong>Bambini e adulti devono stare al tavolo</strong>. Non è consentito girare fra i tavoli o nelle parti comuni se non per recarsi ai bagni, fumare nell'apposita area o lasciare il locale.
                 </li>
                 <li>
-                    <strong>Indossare la mascherina</strong>, tranne quando si è seduti al tavolo.
+                    <strong>Indossare la mascherina</strong>, tranne quando si è seduti al tavolo o se si può mantenere il distanziamento sociale.
                 </li>
                 <li>
                     Evitare in qualsiasi momento assembramenti.
