--- a/covid/index.html
+++ b/covid/index.html
@@ -108,13 +108,13 @@
                     <strong>Le ordinazioni si fanno solo al tavolo</strong>: il bar non è accessibile.
                 </li>
                 <li>
-                    <strong>Il conto si paga al tavolo</strong>: per ogni tavolo accettiamo solo <strong>un pagamento</strong>.
+                    Per ogni tavolo accettiamo solo <strong>un pagamento</strong>.
                 </li>
                 <li>
                     <strong>Bambini e adulti devono stare al tavolo</strong>. Non è consentito girare fra i tavoli o nelle parti comuni se non per recarsi ai bagni, fumare nell'apposita area o lasciare il locale.
                 </li>
                 <li>
-                    <strong>Indossare la mascherina</strong>, tranne quando si è seduti al tavolo o se si può mantenere il distanziamento sociale.
+                    <strong>Indossare la mascherina</strong>, tranne quando si è seduti al tavolo.
                 </li>
                 <li>
                     Evitare in qualsiasi momento assembramenti.
