--- a/covid/index.html
+++ b/covid/index.html
@@ -170,10 +170,10 @@
 					</li>
 		  			<li>
                         <h4 class="subheader">Orari</h4>
-                        <meta itemprop="openingHours" content="Mo, Tu, We, Th, Fr, Sa, Su 19:00-23:00">
+                        <meta itemprop="openingHours" content="We, Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Tutti i Giorni <br>Dalle 19:00 alle 23:00</p>
+                                <p>Dal Mercoledì alla Domenica <br>Dalle 19:00 alle 23:00</p>
                             </div>
                         </div>
                     </li>
