--- a/covid/index.html
+++ b/covid/index.html
@@ -57,7 +57,7 @@
                 <li class="divider"></li>
                 <li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/covid/">Asporto e Consegne</a></li>
+                <li><a href="https://www.beerstrot.it/covid/">Asporto</a></li>
                 <li class="divider"></li>
                 <li><a href="https://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
