--- a/covid/index.html
+++ b/covid/index.html
@@ -88,33 +88,18 @@
                 <li>
                     <strong>Rispettare gli orari</strong>. I turni sono:
                     <ul>
-                        <li>dalle 19:00 alle 20:45</li>
-                        <li>dalle 19:45 alle 21:30</li>
-                        <li>dalle 20:30 alle 22:15</li>
-                        <li>dalle 21:00 alle 22:45</li>
-			            <li>dalle 21:40 a chiusura</li>
+                        <li>dalle 19:00 alle 21:00</li>
+                        <li>dalle 21:10 alle 23:00</li>
                     </ul>
                 </li>
                 <li>
-                    Alla fine del turno, della durata di 1 ora e 45 minuti, lasciare il tavolo per consentire al personale la sanificazione.
+                    Alla fine del turno, lasciare il tavolo per consentire al personale la sanificazione.
                 </li>
                 <li>
-                    <strong>Il ristorante è aperto solo all'esterno</strong>. In caso di pioggia o minaccia di pioggia il ristorante resterà chiuso. Se dovesse piovere durante il servizio vi chiediamo, gentilmente, di lasciare il locale ed evitare assembramenti.
+                    È obbligatorio utilizzare la mascherina quando non si è seduti al tavolo.
                 </li>
                 <li>
-                    I tavoli sono disposti per consentire la distanza di un metro tra i commensali, a prescindere dal grado di parentela.
-                </li>
-                <li>
-                    <strong>Le ordinazioni si fanno solo al tavolo</strong>: il bar non è accessibile.
-                </li>
-                <li>
-                    Per ogni tavolo accettiamo solo <strong>un pagamento</strong>.
-                </li>
-                <li>
-                    <strong>Bambini e adulti devono stare al tavolo</strong>. Non è consentito girare fra i tavoli o nelle parti comuni se non per recarsi ai bagni, fumare nell'apposita area o lasciare il locale.
-                </li>
-                <li>
-                    <strong>Indossare la mascherina</strong>, tranne quando si è seduti al tavolo.
+                    <strong>Bambini e adulti devono stare al tavolo</strong>. Non è consentito girare fra i tavoli o nelle parti comuni se non per recarsi ai bagni.
                 </li>
                 <li>
                     Evitare in qualsiasi momento assembramenti.
@@ -122,12 +107,9 @@
                 <li>
                     Non è consentito portare dolci, spumanti e simili dall'esterno.
                 </li>
-                <li>
-                    È <strong>Vietato Fumare</strong> al di fuori dell'area preposta.
-                </li>
             </ul>
             <p>Il non rispetto di queste norme può causare grave danno a tutti noi, non ultimo il ritiro della licenza.</p>
-            <h2 class="">Alcune attenzioni</h2>
+            <h2 >Alcune attenzioni</h2>
             <ul>
                 <li>
                     Il Menù è accessibile dal telefonino:<a href="https://www.beerstrot.it/menu"> <strong> Guarda il Menù &rarr;</strong></a>
@@ -140,9 +122,6 @@
                 </li>
                 <li>
                     Il personale di sala utilizza mascherine e igienizza le mani continuamente.
-                </li>
-                <li>
-                    I bagni vengono igienizzati più volte durante il servizio, ma senza il vostro aiuto sarebbe tutto inutile.
                 </li>
             </ul>
             <p>Grazie mille per la collaborazione</p>
