--- a/covid/index.html
+++ b/covid/index.html
@@ -48,9 +48,10 @@
             <li class="name">
                  <h2><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h2>
             </li>
-            <li class="toggle-topbar menu-icon">
-                <a href="#"><span>Menù</span></a>
-            </li>
+            <li class="toggle-topbar">
+				<i class="fa fa-bars extra-space-hamburger"></i>
+				<a href="#"><span></span></a>
+			</li>
         </ul>
         <section class="top-bar-section">
             <ul class="right">
