--- a/covid/index.html
+++ b/covid/index.html
@@ -80,64 +80,69 @@
     </div>
     <div class="row">
         <div class="large-12 medium-12 small-12 columns">
+            <h2>Orari</h2>
+            <p>Da Martedì 1 Giugno aperti tutti i giorni dalle 19 alle 23. Salvo diverse indicazioni sul copri fuoco.</p>
             <h2>Alcune regole da rispettare</h2>
-            <p>Per passare una bella serata, abbiamo approntato alcune inderogabili regole che ci permetterano di cenare tranquilli e rilassati.</p>
             <ul>
                 <li>
-                    <strong>La prenotazione è obbligatoria</strong>. Non accettiamo persone in sovrannumero.
+                    <p><strong>La prenotazione è obbligatoria</strong>. Non accettiamo persone in sovrannumero.</p>
+                </li>
+                <li>
+                    <p>Al momento <strong>massimo 4 persone per tavolo</strong> se non conviventi.</p>
                 </li>
                 <li>
                     <strong>Rispettare gli orari</strong>. I turni sono:
                     <ul>
-                        <li>dalle 19:00 alle 21:00</li>
-                        <li>dalle 21:10 alle 23:00</li>
+                        <li>dalle 19:00 alle 20:45</li>
+                        <li>dalle 19:45 alle 21:30</li>
+                        <li>dalle 20:30 alle 22:15</li>
+                        <li>dalle 21:00 alle 22:45</li>
+                        <li>dalle 21:40 a chiusura</li>
                     </ul>
+                    <br>
+                    <p>Alla fine del turno, della durata di 1 ora e 45 minuti, lasciare il tavolo per consentire al personale la sanificazione.</p>
                 </li>
                 <li>
-                    Alla fine del turno, lasciare il tavolo per consentire al personale la sanificazione.
+                    <p><strong>Il ristorante è aperto solo all'esterno</strong>. In caso di pioggia o minaccia di pioggia il ristorante resterà chiuso. Se dovesse piovere durante il servizio vi chiediamo, gentilmente, di lasciare il locale ed evitare assembramenti.</p>
                 </li>
                 <li>
-                    È obbligatorio utilizzare la mascherina quando non si è seduti al tavolo.
+                    <p><strong>Le ordinazioni si fanno solo al tavolo</strong>: il bar non è accessibile.</p>
                 </li>
                 <li>
-                    <strong>Bambini e adulti devono stare al tavolo</strong>. Non è consentito girare fra i tavoli o nelle parti comuni se non per recarsi ai bagni.
+                    <p>Per ogni tavolo accettiamo solo <strong>un pagamento</strong>.</p>
                 </li>
                 <li>
-                    Evitare in qualsiasi momento assembramenti.
+                    <p><strong>Indossare la mascherina</strong>, tranne quando si è seduti al tavolo ed evitare in qualsiasi momento assembramenti.</p>
                 </li>
                 <li>
-                    Non è consentito portare dolci, spumanti e simili dall'esterno.
+                    <p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p>
+                </li>
+                <li>
+                    <p>È <strong>Vietato Fumare</strong> al di fuori dell'area preposta.</p>
                 </li>
             </ul>
-            <p>Il non rispetto di queste norme può causare grave danno a tutti noi, non ultimo il ritiro della licenza.</p>
-            <h2 >Alcune attenzioni</h2>
+            <h2>Come Funziona</h2>
             <ul>
                 <li>
-                    Il Menù è accessibile dal telefonino:<a href="https://www.beerstrot.it/menu"> <strong> Guarda il Menù &rarr;</strong></a>
+                    <p>Il Menù è accessibile dal telefonino:<a href="https://www.beerstrot.it/menu"> <strong> Guarda il Menù &rarr;</strong></a></p>
                 </li>
                 <li>
-                    Piatti e posate sono monouso eco compatibili.
+                    <p>Piatti sono monouso eco compatibili.</p>
                 </li>
                 <li>
-                    Il bere viene servito in vetro igienizzato e sterilizzato.
-                </li>
-                <li>
-                    Il personale di sala utilizza mascherine e igienizza le mani continuamente.
+                    <p>Il bere viene servito in vetro.</p>
                 </li>
             </ul>
             <p>Grazie mille per la collaborazione</p>
-        </div>
 <!-- informativa fine -->
-    </div>
-
-    <!-- call to action inizio -->
-    <div class="row">
-        <div class="medium-12 large-12 columns">
-            <span class="hide-for-small "><a role="button" href="tel:+390718853384" class="button left"><i class="fab fa fa-phone"></i> 071 885 3384</a></span>
-            <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
+<!-- call to action inizio -->
+            <span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
+            <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
+            <!-- <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button small left"><i class="fa fa-phone"></i> Prenota</a></span>
+            <span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button small left"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
         </div>
-    </div>
 <!-- call to action fine -->
+    </div>
 <!-- inizio footer -->
     <footer class="panel-footer extra-space">
         <div class="row">
