--- a/covid/index.html
+++ b/covid/index.html
@@ -201,7 +201,7 @@
             <p class="links">
                 <a href="https://www.beerstrot.it">Home</a>
                 <a href="https://www.beerstrot.it/menu/">Menù</a>
-                <a href="https://www.beerstrot.it/covid/">Asporto e Consegne</a>
+                <a href="https://www.beerstrot.it/covid/">Asporto</a>
                 <a href="https://www.beerstrot.it/social/">Social</a>
                 <a href="https://www.beerstrot.it/contatti/">Contatti</a>
                 <a href="https://www.beerstrot.it/blog/">Blog</a>
