add nr max persone per tavolo

--- a/covid/index.html
+++ b/covid/index.html
@@ -88,6 +88,9 @@
                     <p><strong>La prenotazione è obbligatoria</strong>. Non accettiamo persone in sovrannumero.</p>
                 </li>
                 <li>
+                    <p>Massimo 4  persone per tavolo, se non conviventi.</p>
+                </li>
+                <li>
                     <strong>Rispettare gli orari</strong>. I turni sono:
                     <ul>
                         <li>dalle 19:00 alle 20:45</li>
@@ -106,7 +109,7 @@
                     <p><strong>Le ordinazioni si fanno solo al tavolo</strong>: il bar non è accessibile.</p>
                 </li>
                 <li>
-                    <p>Per ogni tavolo accettiamo solo <strong>un pagamento</strong>.</p>
+                    <p>Per ogni tavolo accettiamo massimo <strong>due pagamenti</strong>.</p>
                 </li>
                 <li>
                     <p><strong>Indossare la mascherina</strong>, tranne quando si è seduti al tavolo ed evitare in qualsiasi momento assembramenti.</p>
