--- a/covid/index.html
+++ b/covid/index.html
@@ -102,7 +102,7 @@
                 <li>
                     <p><strong>Il ristorante è aperto solo all'esterno</strong>. In caso di pioggia o minaccia di pioggia il ristorante resterà chiuso. Se dovesse piovere durante il servizio vi chiediamo, gentilmente, di lasciare il locale ed evitare assembramenti.</p>
                 </li>
-                <li>Il green pass non è necessario: il ristorante è aperto solo all'esterno.</li>
+                <li>Il <strong>green pass</strong> non è necessario: il ristorante è aperto solo all'esterno.</li>
                 <li>
                     <p><strong>Le ordinazioni si fanno solo al tavolo</strong>: il bar non è accessibile.</p>
                 </li>
